force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/mixmax__MixmaxSyncedFields__c.object-meta.xml
<CustomObject>
    <description>Fields synced by the Mixmax package</description>
    <label>Mixmax Synced Fields</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Mixmax synced fields (should be singleto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mixmax Synced Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>