force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__AccountFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__AccountFields__c</fullName>
    <label>Account synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>