force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__ConfiguredCustomObjects__c.field-meta.xml
<CustomField>
    <fullName>mixmax__ConfiguredCustomObjects__c</fullName>
    <label>Custom objects configured in Mixmax</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>