force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__ContactFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__ContactFields__c</fullName>
    <label>Contact synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>