force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__EventFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__EventFields__c</fullName>
    <label>Event synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>