force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>mixmax__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>