force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__IsObjectConfigured__c.field-meta.xml
<CustomField>
    <fullName>mixmax__IsObjectConfigured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is object configured (DO NOT EDIT)</label>
    <type>Checkbox</type>
</CustomField>