force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__LeadFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__LeadFields__c</fullName>
    <label>Lead synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>