force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__OpportunityContactRoleFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__OpportunityContactRoleFields__c</fullName>
    <label>OpportunityContactRole synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>