force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__OpportunityFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__OpportunityFields__c</fullName>
    <label>Opportunity synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>