force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__TaskFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__TaskFields__c</fullName>
    <label>Task synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>