force-app/main/default/objects/mixmax__MixmaxSyncedFields__c/fields/mixmax__UserFields__c.field-meta.xml
<CustomField>
    <fullName>mixmax__UserFields__c</fullName>
    <label>User synced fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>